# Qt

./: .gitignore
Dog/: Assembly-CSharp.csproj  Boxophobic.SkyboxCubemapExtended.Editor.csproj  Boxophobic.Utils.Editor.csproj  Boxophobic.Utils.Scripts.csproj  Dog.sln
Dog/Assets/Animations/Animators/: Enemy_Golem.overrideController  Enemy_Grunt.controller  Enemy_Slime.controller  Enemy_TurtleShell.overrideController  Player.controller
Dog/Assets/Combat/: AttackData_SO.cs
Dog/Assets/Game Data/Attack Data/: Golem Attack.asset  Grunt Attack.asset  Player BaseAttackData.asset  Slime Attack.asset  TurtleShell Attack.asset
Dog/Assets/Game Data/Character Data/: Golem Data.asset  Grunt Data.asset  Player Data.asset  Slime Data.asset  TurtleShell Data.asset
Dog/Assets/Materials/: Green Portal.mat  Ground.mat  Occlusion.mat  Polybrush_Universal Render Pipeline_Lit Vertex Color URP.mat
Dog/Assets/Materials/Shader Graph/: Occlusion Shader.shadergraph  Portal Shader.shadergraph
Dog/Assets/PipelineSettings/: UniversalRenderPipelineAsset.asset
Dog/Assets/Polybrush Data/Color Palette/: ColorPalette-Default.asset
Dog/Assets/Polybrush Data/Prefab Palette/: PrefabPalette-Default.asset
Dog/Assets/Prefabs/Characters/: Golem.prefab  Grunt.prefab  Player.prefab  SlimePolyart.prefab  TurtleShellPolyart.prefab
Dog/Assets/Prefabs/Portals/: Portal.prefab
Dog/Assets/Prefabs/UI/: Bar Holder.prefab  HealthBarCanvas.prefab  PlayerHealth Canvas.prefab
Dog/Assets/Prefabs/Weapon/: Rock.prefab  RockBreakSystem.prefab
Dog/Assets/Scenes/Plane/: NavMesh.asset
Dog/Assets/Scenes/SampleScene/: Global Volume Profile.asset  LightingData.asset  NavMesh.asset  ReflectionProbe-0.exr
Dog/Assets/Scripts/Characters/: EnemyController.cs  PlayerController.cs
Dog/Assets/Scripts/Managers/: GameManager.cs  MouseManager.cs  SaveManager.cs
Dog/Assets/Scripts/Mangers/: MouseManager.cs
Dog/Assets/Scripts/Tools/: ExtensionMethod.cs  Singleton.cs
Dog/Assets/Scripts/Transition/: SceneController.cs  TransitionDestination.cs  TransitonPoint.cs
Dog/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
Game2048/: Game2048.pro  README.md  gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h
PvZLike/: Animation.cpp  Animation.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Entity.h  Game.cpp  Game.h  Global.h  Manager.h  Map.cpp  Map.h  Plants.cpp  Plants.h  Resource.qrc  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Zombies.cpp  Zombies.h  app.rc  main.cpp
my2048/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
(+23 files in other folders)
